# continue-claude-code

./: .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
src/continue_claude_code/: __main__.py
